--- a/synergy/mx/templates/processing_statements.html
+++ b/synergy/mx/templates/processing_statements.html
@@ -10,7 +10,7 @@
     <input type="submit" value="List"/> <br/>
 </form>
 
-<table style="width: 90%" class="one-column-emphasis context-menu synergy_datatable">
+<div><table style="width: 90%" class="one-column-emphasis context-menu synergy_datatable" id="dashboard_table">
     <thead>
     <tr class="oce-first">
         <th scope="col"><input type='checkbox' name ='select_all' onclick='toggle_all_checkboxes(this)'/> </th>
@@ -48,7 +48,7 @@
     {%- endfor -%}
 
     </tbody>
-</table>
+</table></div>
 
 <div class="context_menu_hide" id="rmenu">
     <ul>
