--- a/synergy/mx/templates/timetable_details.html
+++ b/synergy/mx/templates/timetable_details.html
@@ -23,7 +23,7 @@
     <tr>
         <td>{{ process_details.process_name }}</td>
         <td>{{ process_details.time_qualifier }}</td>
-        <td>{{ process_details.state_machine }}</td>
+        <td>{{ process_details.state_machine_name }}</td>
         <td>{{ process_details.process_type }}</td>
         <td>{{ process_details.run_on_active_timeperiod }}</td>
         <td>{{ tree_obj.dependent_on }}</td>
