--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -4,9 +4,10 @@
     {% set mx_trees = {
         'TreeSite': {
             'tree_name': 'TreeSite',
+            'sorted_process_names': ['SiteYearlyAggregator', 'SiteMonthlyAggregator', 'SiteDailyAggregator', 'SiteHourlyAggregator'],
             'processes': {
-                'SiteYearly': {
-                    'process_name': 'SiteYearly',
+                'SiteYearlyAggregator': {
+                    'process_name': 'SiteYearlyAggregator',
                     'time_qualifier': '_yearly',
                     'state_machine_name': 'discrete',
                     'process_type': 'type_managed',
@@ -17,8 +18,8 @@
                     'state': 'state_on',
                     'blocking_type': 'blocking_normal'
                 },
-                'SiteMonthly': {
-                    'process_name': 'SiteMonthly',
+                'SiteMonthlyAggregator': {
+                    'process_name': 'SiteMonthlyAggregator',
                     'time_qualifier': '_monthly',
                     'state_machine_name': 'discrete',
                     'process_type': 'type_managed',
@@ -29,8 +30,8 @@
                     'state': 'state_on',
                     'blocking_type': 'blocking_normal'
                 },
-                'SiteDaily': {
-                    'process_name': 'SiteDaily',
+                'SiteDailyAggregator': {
+                    'process_name': 'SiteDailyAggregator',
                     'time_qualifier': '_daily',
                     'state_machine_name': 'discrete',
                     'process_type': 'type_managed',
@@ -41,8 +42,8 @@
                     'state': 'state_on',
                     'blocking_type': 'blocking_normal'
                 },
-                'SiteHourly': {
-                    'process_name': 'SiteHourly',
+                'SiteHourlyAggregator': {
+                    'process_name': 'SiteHourlyAggregator',
                     'time_qualifier': '_hourly',
                     'state_machine_name': 'discrete',
                     'process_type': 'type_managed',
@@ -57,9 +58,10 @@
         },
         'TreeAlert': {
             'tree_name': 'TreeAlert',
+            'sorted_process_names': ['AlertDailyWorker'],
             'processes': {
-                'AlertDaily': {
-                    'process_name': 'AlertDaily',
+                'AlertDailyWorker': {
+                    'process_name': 'AlertDailyWorker',
                     'time_qualifier': '_daily',
                     'state_machine_name': 'discrete',
                     'process_type': 'type_managed',
@@ -78,13 +80,13 @@
     {%- for tree_name, tree_obj in mx_trees.items() -%}
         <div class="grid-container">
             <div id="grid-header-{{ tree_name }}" class="grid-header"></div>
-            {%- for process_name in tree_obj.processes -%}
+            {%- for process_name in tree_obj.sorted_process_names -%}
             <div id="grid-header-{{ process_name }}" class="grid-header"></div>
             {%- endfor -%}
         </div>
         <div class="grid-container">
             <div id="grid-info-{{ tree_name }}" class="grid-info"></div>
-            {%- for process_name in tree_obj.processes -%}
+            {%- for process_name in tree_obj.sorted_process_names -%}
             <div id="grid-info-{{ process_name }}" class="grid-info context-menu"></div>
             {%- endfor -%}
         </div>
