--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="{{ url_for('static', file='scheduler_ui.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='navigation_menu.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='tiles.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='synergy_utils.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='mx_page.js') }}"></script>
     <title>Synergy Scheduler</title>
 </head>
