--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -17,20 +17,8 @@
 </form>
 
 <script type="text/javascript">
-    function getUrlParameter(sParam) {
-        var sPageURL = window.location.search.substring(1);
-        var sURLVariables = sPageURL.split('&');
-        for (var i = 0; i < sURLVariables.length; i++) {
-            var sParameterName = sURLVariables[i].split('=');
-            if (sParameterName[0] == sParam) {
-                return sParameterName[1];
-            }
-        }
-        return null;
-    }
-
     $(document).ready(function () {
-        var action = getUrlParameter('action');
+        var action = get_url_parameter('action');
         var url = '/' + action + '/?' + window.location.search.substring(1);
 
         $.get(url, function (data) {
