--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -22,7 +22,7 @@
         var url = '/' + action + '/?' + window.location.search.substring(1);
 
         $.get(url, function (data) {
-            $("#json").text(FormatJSON(data));
+            $("#json").text(formatJSON(data));
         });
     });
 </script>
