--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -4,16 +4,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://www.w3.org/2005/10/profile">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='scheduler_ui.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='mx_page.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
-    <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='jquery.dataTables-1.9.4.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='scheduler_ui.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='navigation_menu.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='tiles.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='synergy_utils.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='mx_page.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', file='js/jquery-1.8.2.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/jquery.dataTables-1.9.4.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/navigation_menu.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/synergy_utils.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
     <title>Synergy Scheduler</title>
 </head>
 
@@ -56,5 +57,5 @@
 
 </body>
 
-<script type="text/javascript" src="{{ url_for('static', file='context_menu.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
 </html>
