--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -4,9 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='scheduler_ui.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', file='json_formatter.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', file='js/json_formatter.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/jquery-1.8.2.min.js') }}"></script>
     <script type="text/javascript">
         window.onunload = refreshParent;
         function refreshParent() {
