- grouping js utils - adding onclick listener to the tiles

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -13,8 +13,7 @@
     <script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/navigation_menu.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='js/synergy_utils.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='js/json_formatter.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
     <title>Synergy Scheduler</title>
 </head>
