--- a/synergy/mx/static/css/mx_page.css
+++ b/synergy/mx/static/css/mx_page.css
@@ -68,7 +68,7 @@ body {
     margin-bottom: 10px;
 }
 
-div.is_next_timeperiod {
+div.is_selected_timeperiod {
     border: 2px solid darkorange;
 }
 
