--- a/synergy/mx/templates/processing_details.html
+++ b/synergy/mx/templates/processing_details.html
@@ -12,15 +12,6 @@
         </div>
     </div>
 
-    <div class="context_menu_hide" id="rmenu">
-        <ul>
-            <li>
-                <a onclick="process_batch('action_skip', false)">Skip</a>
-            </li>
-            <li>
-                <a onclick="process_batch('action_reprocess', false)">Reprocess</a>
-            </li>
-        </ul>
-    </div>
+{% include 'block_context_job.html' %}
 
 {% endblock %}
