--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -92,15 +92,6 @@
         </div>
     {%- endfor -%}
 
-    <div class="context_menu_hide" id="rmenu">
-        <ul>
-            <li>
-                <a onclick="process_batch('action_skip', false)">Skip</a>
-            </li>
-            <li>
-                <a onclick="process_batch('action_reprocess', false)">Reprocess</a>
-            </li>
-        </ul>
-    </div>
+{% include 'block_context_job.html' %}
 
 {% endblock %}
