--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -102,15 +102,6 @@
     </tbody>
 </table>
 
-<div class="context_menu_hide" id="rmenu">
-    <ul>
-        <li>
-            <a onclick="process_batch('action_activate_trigger', true)">Activate</a>
-        </li>
-        <li>
-            <a onclick="process_batch('action_deactivate_trigger', true)">Deactivate</a>
-        </li>
-    </ul>
-</div>
+{% include 'block_context_trigger.html' %}
 
 {% endblock %}
