--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -92,6 +92,7 @@
         </div>
     {%- endfor -%}
 
-{% include 'block_context_job.html' %}
+{% import 'block_context_menu.html' as context_menu %}
+{{ context_menu.job_menu() }}
 
 {% endblock %}
