--- a/synergy/mx/templates/processing_details.html
+++ b/synergy/mx/templates/processing_details.html
@@ -12,6 +12,7 @@
         </div>
     </div>
 
-{% include 'block_context_job.html' %}
+{% import 'block_context_menu.html' as context_menu %}
+{{ context_menu.job_menu() }}
 
 {% endblock %}
