--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -74,6 +74,7 @@
     </tbody>
 </table>
 
-{% include 'block_context_trigger.html' %}
+{% import 'block_context_menu.html' as context_menu %}
+{{ context_menu.trigger_menu(false) }}
 
 {% endblock %}
