- adding base request handler

--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -6,7 +6,7 @@
     <label><input type="radio" name="time_window" id="days_7" value="days_7"/>Last 7 Days</label>
     <label><input type="radio" name="time_window" id="days_30" value="days_30"/>Last 30 Days</label>
     <br/>
-    <label><input type="checkbox" name="state" id="state" checked="true"/>Unprocessed only</label>
+    <label><input type="checkbox" name="unprocessed_only" id="unprocessed_only" checked="true"/>Unprocessed only</label>
     <input type="submit" value="List"/> <br/>
 </form>
 
