--- a/synergy/mx/templates/block_context_menu.html
+++ b/synergy/mx/templates/block_context_menu.html
@@ -2,12 +2,12 @@
 <div class="context_menu_hide" id="rmenu">
     <ul>
         <li>
-            <a onclick="process_batch('action_activate_trigger', {{ is_freerun }} )">
+            <a onclick="process_batch('action/activate_trigger', {{ is_freerun }} )">
                 <i class="fa fa-toggle-on"></i>&nbsp;Activate
             </a>
         </li>
         <li>
-            <a onclick="process_batch('action_deactivate_trigger', {{ is_freerun }} )">
+            <a onclick="process_batch('action/deactivate_trigger', {{ is_freerun }} )">
                 <i class="fa fa-toggle-off"></i>&nbsp;Deactivate
             </a>
         </li>
@@ -20,12 +20,12 @@
 <div class="context_menu_hide" id="rmenu">
     <ul>
         <li>
-            <a onclick="process_batch('action_skip', false)">
+            <a onclick="process_batch('action/skip', false)">
                 <i class="fa fa-step-forward"></i>&nbsp;Skip
             </a>
         </li>
         <li>
-            <a onclick="process_batch('action_reprocess', false)">
+            <a onclick="process_batch('action/reprocess', false)">
                 <i class="fa fa-repeat"></i>&nbsp;Reprocess
             </a>
         </li>
