--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -31,14 +31,14 @@
         <td>{{ job_entry.timeperiod }}</td>
         <td>{{ job_entry.state }}</td>
         <td>
-            {% set url = 'action=action_get_uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+            {% set url = 'action=action/get_uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
                 <input type="submit" value="Get&nbsp;Uow"/>
             </form>
         </td>
         <td>
-            {% set url = 'action=action_get_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+            {% set url = 'action=action/get_log' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
                 <input type="submit" value="View&nbsp;Log"/>
