--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -35,7 +35,7 @@
         <td>{{ row.process_name }}</td>
         <td>{{ row.entry_name }}</td>
         <td>
-            <form method="GET" action="/action_change_interval/">
+            <form method="GET" action="/action/change_interval/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
                 <input type="hidden" name="is_freerun" value="True" />
@@ -44,7 +44,7 @@
             </form>
         </td>
         <td>
-            <form method="GET" action="/action_trigger_now/">
+            <form method="GET" action="/action/trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
                 <input type="hidden" name="is_freerun" value="True" />
@@ -55,21 +55,21 @@
         <td>{{ row.next_run_in }}</td>
         <td>{{ row.arguments|jsonify }}</td>
         <td>
-            {% set url = 'action=action_get_log' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
+            {% set url = 'action=action/get_log' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
                 <input type="submit" value="View Log"/>
             </form>
         </td>
         <td>
-            {% set url = 'action=action_get_uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
+            {% set url = 'action=action/get_uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_freerun=True' %}
             <form method="GET" onsubmit="window.open('/object_viewer/?{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
                 <input type="submit" value="Get Uow"/>
             </form>
         </td>
         <td>
-            <form method="GET" action="/action_cancel_uow/">
+            <form method="GET" action="/action/cancel_uow/">
                 <input type="hidden" name="process_name" value="{{ row.process_name }}" />
                 <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
                 <input type="hidden" name="is_freerun" value="True" />
