- optimizing import of the javascript files - replacing STATE_ON/STATE_OFF with the boolean field

--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -5,8 +5,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.3.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
+
     <script type="text/javascript">
         window.onunload = refreshParent;
         function refreshParent() {
