--- a/synergy/mx/templates/timetable_details.html
+++ b/synergy/mx/templates/timetable_details.html
@@ -35,4 +35,6 @@
     </table>
 {% endfor %}
 
+<script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
+
 {% endblock %}
