--- a/synergy/mx/templates/block_context_menu.html
+++ b/synergy/mx/templates/block_context_menu.html
@@ -13,6 +13,7 @@
         </li>
     </ul>
 </div>
+<script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
 {%- endmacro %}
 
 
@@ -31,4 +32,5 @@
         </li>
     </ul>
 </div>
+<script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
 {%- endmacro %}
