--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -95,4 +95,7 @@
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
 
+<script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
+
 {% endblock %}
