--- a/synergy/mx/templates/processing_details.html
+++ b/synergy/mx/templates/processing_details.html
@@ -15,4 +15,7 @@
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
 
+<script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', file='js/navigation_menu.js') }}"></script>
+
 {% endblock %}
