--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -77,4 +77,6 @@
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.trigger_menu(false) }}
 
+<script type="text/javascript" src="{{ url_for('static', file='js/scheduler_ui.js') }}"></script>
+
 {% endblock %}
