--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -19,6 +19,9 @@
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.job_menu() }}
 
+<script type="text/javascript">
+    var mx_trees = {{ details|jsonify|safe }};
+</script>
 <script type="text/javascript" src="{{ url_for('static', file='js/tiles.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', file='js/mx_page.js') }}"></script>
 
