--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -19,11 +19,11 @@
     <thead>
     <tr>
         <th>Synergy Scheduler</th>
-        <th style="text-align: left">build. {{ get_version() }}</th>
+        <th></th>
         {%- for mx_rule, mx_name in mx_processing_context.items() -%}
         <th></th>
         {%- endfor -%}
-        <th colspan="2" style="text-align: right">page last updated: {{ get_current_time() }}</th>
+        <th colspan="2" style="text-align: right">page rendered: {{ get_current_time() }}</th>
     </tr>
     </thead>
     <tbody>
