- adding uptime field

--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -66,8 +66,8 @@
     <tbody>
 
     <tr>
-        <td>{{ get_version() }}</td>
-        <td>{{ get_uptime() }}</td>
+        <td>{{ scheduler_version() }}</td>
+        <td>{{ scheduler_uptime() }}</td>
         <td>{{ details.footprint.memory_rss }}</td>
         <td>{{ details.footprint.memory_vms }}</td>
         <td>{{ details.footprint.cpu_utilization }}</td>
