- dropping legacy js and css

--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -5,7 +5,9 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/demo_table.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='js/jquery-2.1.3.min.js') }}"></script>
