- catching up with the latest demo_table.css - applying DRY to the scheduler_ui.css - updating appropriate HTML files

--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -12,7 +12,7 @@
 
 <div><table style="width: 90%" class="one-column-emphasis synergy_datatable" id="dashboard_table">
     <thead>
-    <tr class="oce-first">
+    <tr class="one-column-emphasis-first">
         <th scope="col">Process Name</th>
         <th scope="col">Entry Name</th>
         <th scope="col">Time period</th>
