--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -12,7 +12,7 @@
 
 <div><table style="width: 90%" class="one-column-emphasis context-menu synergy_datatable" id="dashboard_table">
     <thead>
-    <tr class="oce-first">
+    <tr class="one-column-emphasis-first">
         <th scope="col"><input type='checkbox' name ='select_all' onclick='toggle_all_checkboxes(this)'/> </th>
         <th scope="col">Process Name</th>
         <th scope="col">Time period</th>
