--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -2,7 +2,7 @@
 {% block body %}
 <table style="width: 90%" class="one-column-emphasis context-menu">
     <thead>
-    <tr class="oce-first">
+    <tr class="one-column-emphasis-first">
         <th scope="col"><input type="checkbox" name="select_all" onclick="toggle_all_checkboxes(this)"/> </th>
         <th scope="col">Trigger On/Alive</th>
         <th scope="col">Process Name</th>
@@ -53,7 +53,7 @@
 
 <table style="width: 90%" class="one-column-emphasis">
     <thead>
-    <tr class="oce-first">
+    <tr class="one-column-emphasis-first">
         <th scope="col">Build Version</th>
         <th scope="col">Uptime</th>
         <th scope="col">Resident Memory</th>
